--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Dec, 2021] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Youkun! <br/>  
                     <li>[Sept, 2021] I will join the TPC of <a href="https://www2022.thewebconf.org/cfp/research/security/">WWW 2022</a> (Security, Privacy, and Trust Track). Welcome to submit!</li>
                     <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
                     </li>
@@ -329,10 +330,10 @@
                     </li>
                     <li>[March, 2021] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2022/cfpapers.html">S&P 2022</a>. Welcome to submit!</li>
                     <li>[Dec, 2020] Join the TPC of <a href="https://esorics2021.athene-center.de/call-for-papers.php">ESORICS 2021</a>. Note that we have two submission cycles this year, welcome to submit! </li>
-                    <li>[Oct, 2020] Join the TPC of <a href="https://www.ieee-security.org/TC/EuroSP2021/cfp.html">EuroS&P 2021</a>. Welcome to submit!</li>
+                    <!-- <li>[Oct, 2020] Join the TPC of <a href="https://www.ieee-security.org/TC/EuroSP2021/cfp.html">EuroS&P 2021</a>. Welcome to submit!</li>
                     <li>[Sep, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
                         <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to <u>the latest Linux kernel (5.6-rc2)</u>, we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
-                    </li>
+                    </li> -->
                     <!-- <li>[Aug, 2020] Moved to the beautiful Jiangwan campus, welcome to visit us!</li>
                     <li>[Aug, 2020] Join the TPC of <a href="http://www.codaspy.org/2021/cfp.html">CODASPY 2021</a>. Welcome to submit!</li>
                     <li>[July, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Xiaohan! <br/> 
@@ -369,6 +370,12 @@
             <div id="pub">
                 <ol>
                     <li>
+                        <div class="title">Backporting Security Patches of Web Applications: A Prototype Design and Implementation on Injection Vulnerability Patches.</div>
+                        <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Xiangyu Mao, Yinzhi Cao, Ziwen Wang, Yudi Zhao, Zongan Huang, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022 (coming soon).
+                        </div>
+                    </li> 
+                    <li>
                         <div class="title">Exploit The Last Straw that Breaks Android System.</div>
                         <div class="author">Lei Zhang, Keke Lian, Haoyu Xiao, Zhibo Zhang, Peng Liu, Yuan Zhang, Min Yang, Haixin Duan.</div>
                         <div class="venue">In Proceedings of the 43rd IEEE Symposium on Security and Privacy (S&P), May 22-26, 2022 (coming soon).
@@ -377,13 +384,15 @@
                     <li>
                         <div class="title">Locating the Security Patches for Disclosed OSS Vulnerabilities with Vulnerability-Commit Correlation Ranking.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Chenyuan Mi, Jiajun Cao, Kun Sun, Yifan Lin, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 28th ACM Conference on Computer and Communications Security (CCS), Seoul, South Korea, November 14-19, 2021 (coming soon).
+                        <div class="venue">In Proceedings of the 28th ACM Conference on Computer and Communications Security (CCS), Seoul, South Korea, November 14-19, 2021.
+                            <a href="./paper/patchscout-ccs21.pdf">[Paper]</a>
                         </div>
                     </li>                      
                     <li>
                         <div class="title">Facilitating Vulnerability Assessment through PoC Migration.</div>
                         <div class="author">Jiarun Dai, Yuan Zhang, Hailong Xu, Haiming Lyu, Zicheng Wu, Xinyu Xing, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 28th ACM Conference on Computer and Communications Security (CCS), Seoul, South Korea, November 14-19, 2021 (coming soon).
+                        <div class="venue">In Proceedings of the 28th ACM Conference on Computer and Communications Security (CCS), Seoul, South Korea, November 14-19, 2021.
+                            <a href="./paper/vulscope-ccs21.pdf">[Paper]</a>
                         </div>
                     </li>    
                     <li>
@@ -552,7 +561,7 @@
                         <ul><li><i>Spring 2018, Spring 2019, Spring 2020, Spring 2021</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
-                        <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019, Fall 2020</i></li></ul>
+                        <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019, Fall 2020, Fall 2021</i></li></ul>
                     </li>
                     <li> Compiler Principles <i>(in School of Software)</i>
                         <ul><li><i>Fall 2017</i></li></ul>
@@ -585,14 +594,14 @@
                 <ul>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
                     <li>the 31st USENIX Security Symposium (USENIX Security 2022)</i>
-                    <li>the 31st International World Wide Web Conference, <i>Track: Security, Privacy, and Trust</i> (WWW 2022)</i>                    
+                    <li>the 31st International World Wide Web Conference (WWW 2022)</i>                    
                     <li>the 17th ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2022)</i>
-                    <!-- <li>the 27th IEEE International Conference on Parallel and Distributed Systems, <i>Track: Security & Blockchain</i> (ICPADS 2021)</li> -->
-                    <li>the 23rd International Conference on Information and Communications Security (ICICS 2021)</i>
+                    <li>the 24th International Conference on Information and Communications Security (ICICS 2022)</i>
                     <li>the 26th European Symposium on Research in Computer Security (ESORICS 2021)</i>
                     <li>the 6th IEEE European Symposium on Security and Privacy (EuroS&P 2021)</i>
                     <li>the 11th ACM Conference on Data and Application Security and Privacy (CODASPY 2021)</i>
                     <li>the 16th ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2021)</i>
+                    <li>the 23rd International Conference on Information and Communications Security (ICICS 2021)</i>
                     <li>the 16th EAI Conference on Security and Privacy in Communication Networks (SecureComm 2020)</i>
                     <li>the 25th European Symposium on Research in Computer Security (ESORICS 2020)</i>
                 </ul>
@@ -604,11 +613,12 @@
                 </ul>
             <div>Journal Reviewer:<br>
                 <ul>
+                    <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019, 2021</li>
+                    <li>IEEE Transactions on Computers (TC) 2021</li>
+                    <li>Computer & Security 2016, 2017, 2018, 2019, 2020, 2021</li>
+                    <li>Journal of Software 2016, 2017, 2018, 2019, 2020, 2021</li>
                     <li>IEEE Transactions on Network and Service Management 2020</li>
                     <li>Computer Communications 2020</li>
-                    <li>Computer & Security 2016, 2017, 2018, 2019, 2020, 2021</li>
-                    <li>Journal of Software 2016, 2017, 2018, 2019, 2020</li>
-                    <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019</li>
                     <li>IEEE Transactions on Mobile Computing (TMC) 2016</li>
                     <li>ACM Transactions on Information Systems (TOIS) 2016</li>
                     <li>SCIENCE CHINA Information Sciences 2016</li>
