--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Jan, 2022] Join the TPC of <a href="https://esorics2022.compute.dtu.dk/cfp.html">ESORICS 2022</a>. We have two submission cycles this year: Jan 31 and May 22. Welcome to submit! </li>
                     <li>[Dec, 2021] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Youkun! <br/>  
                     <li>[Sept, 2021] I will join the TPC of <a href="https://www2022.thewebconf.org/cfp/research/security/">WWW 2022</a> (Security, Privacy, and Trust Track). Welcome to submit!</li>
                     <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
@@ -329,7 +330,7 @@
                             
                     </li>
                     <li>[March, 2021] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2022/cfpapers.html">S&P 2022</a>. Welcome to submit!</li>
-                    <li>[Dec, 2020] Join the TPC of <a href="https://esorics2021.athene-center.de/call-for-papers.php">ESORICS 2021</a>. Note that we have two submission cycles this year, welcome to submit! </li>
+                    <!-- <li>[Dec, 2020] Join the TPC of <a href="https://esorics2021.athene-center.de/call-for-papers.php">ESORICS 2021</a>. Note that we have two submission cycles this year, welcome to submit! </li> -->
                     <!-- <li>[Oct, 2020] Join the TPC of <a href="https://www.ieee-security.org/TC/EuroSP2021/cfp.html">EuroS&P 2021</a>. Welcome to submit!</li>
                     <li>[Sep, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
                         <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to <u>the latest Linux kernel (5.6-rc2)</u>, we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
@@ -558,7 +559,7 @@
             <div>Undergraduate level:<br>
                 <ul>
                     <li> Principles of Reverse Engineering <i>(in School of Computer Science)</i>
-                        <ul><li><i>Spring 2018, Spring 2019, Spring 2020, Spring 2021</i></li></ul>
+                        <ul><li><i>Spring 2018, Spring 2019, Spring 2020, Spring 2021, Spring 2022</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
                         <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019, Fall 2020, Fall 2021</i></li></ul>
@@ -572,7 +573,7 @@
             <div>Graduate level:<br>
                 <ul>
                     <li> Emerging Attack & Defense Techniques <i>(in School of Software)</i>
-                        <ul><li><i>Spring 2019, Spring 2020, Spring 2021</i></li></ul>
+                        <ul><li><i>Spring 2019, Spring 2020, Spring 2021, Spring 2022</i></li></ul>
                     </li>
                     <li> Computer Network Security <i>(in School of Software)</i>
                         <ul><li><i>Spring 2016, Spring 2017, Spring 2018</i></li></ul>
@@ -592,6 +593,7 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 27th European Symposium on Research in Computer Security (ESORICS 2022)</i>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
                     <li>the 31st USENIX Security Symposium (USENIX Security 2022)</i>
                     <li>the 31st International World Wide Web Conference (WWW 2022)</i>                    
