--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
-                    <li>[Jan, 2022] Join the TPC of <a href="https://esorics2022.compute.dtu.dk/cfp.html">ESORICS 2022</a>. We have two submission cycles this year: Jan 31 and May 22. Welcome to submit! </li>
+                    <li>[Jan, 2022] One paper accepted by <a href="https://www2022.thewebconf.org">WWW 2022</a>. Congrats Xin & Jiajun! <br/>  
+                    <li>[Jan, 2022] One paper accepted by IEEE TDSC. Congrats Xiaohan! <br/>      
+                    <li>[Jan, 2022] Join the TPC of <a href="https://esorics2022.compute.dtu.dk/cfp.html">ESORICS 2022</a>. We have two submission cycles this year (Jan 31 and May 22). Welcome to submit! </li>
                     <li>[Dec, 2021] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Youkun! <br/>  
                     <li>[Sept, 2021] I will join the TPC of <a href="https://www2022.thewebconf.org/cfp/research/security/">WWW 2022</a> (Security, Privacy, and Trust Track). Welcome to submit!</li>
                     <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
@@ -371,15 +373,26 @@
             <div id="pub">
                 <ol>
                     <li>
-                        <div class="title">Backporting Security Patches of Web Applications: A Prototype Design and Implementation on Injection Vulnerability Patches.</div>
-                        <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Xiangyu Mao, Yinzhi Cao, Ziwen Wang, Yudi Zhao, Zongan Huang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022 (coming soon).
+                        <div class="title">Understanding the Practice of Security Patch Management across Multiple Branches in OSS Projects.</div>
+                        <div class="author">Xin Tan, Yuan Zhang, Jiajun Cao, Kun Sun, Mi Zhang and Min Yang.</div>
+                        <div class="venue">In Proceedings of the 31st ACM Web Conference (WWW), Lyon, France, April 25–29, 2022 (coming soon).
                         </div>
                     </li> 
                     <li>
+                        <div class="title">Slowing Down the Aging of Learning-based Malware Detectors with API Knowledge.</div>
+                        <div class="author">Xiaohan Zhang, Mi Zhang, Yuan Zhang, Ming Zhong, Xin Zhang, Yinzhi Cao, Min Yang.</div>
+                        <div class="venue">In Transactions on Dependable and Secure Computing (TDSC), 2022 (coming soon).
+                        </div>
+                    </li> 
+                    <li>
+                        <div class="title">Backporting Security Patches of Web Applications: A Prototype Design and Implementation on Injection Vulnerability Patches.</div>
+                        <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Xiangyu Mao, Yinzhi Cao, Ziwen Wang, Yudi Zhao, Zongan Huang, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022 (coming soon).
+                    </li>
+                    <li>
                         <div class="title">Exploit The Last Straw that Breaks Android System.</div>
                         <div class="author">Lei Zhang, Keke Lian, Haoyu Xiao, Zhibo Zhang, Peng Liu, Yuan Zhang, Min Yang, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 43rd IEEE Symposium on Security and Privacy (S&P), May 22-26, 2022 (coming soon).
+                        <div class="venue">In Proceedings of the 43rd IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2022 (coming soon).
                         </div>
                     </li>                      
                     <li>
@@ -610,7 +623,7 @@
             </div>
             <div>Editorial Board:<br>
                 <ul>
-                    <li><a href="https://www.springer.com/journal/10664">Empirical Software Engineering Journal</a> (EMSE), 2021-now</li>
+                    <li><a href="https://www.springer.com/journal/10664">Empirical Software Engineering</a> (EMSE), 2021-now</li>
                     <li>Journal of Software (<i>Special Issue: System Software Security Track, in Chinese</i>), 2021</li>
                 </ul>
             <div>Journal Reviewer:<br>
