--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
                     </li>
                     <li>[May, 2021] I will join the TPC of <a href="https://asiaccs2022.conferenceservice.jp/dateandcall/callforpapers/">AsiaCCS 2022</a>. Welcome to submit!</li>
-                    <li>[May, 2021] I will join the Editorial Board of <a href="https://www.springer.com/journal/10664">Empirical Software Engineering Journal</a>.  More information can be found <a href="https://emsejournal.github.io">here</a>. Welcome to submit!</li>
+                    <li>[May, 2021] I will join the Editorial Board of <a href="https://www.springer.com/journal/10664">Empirical Software Engineering</a>.  More information can be found <a href="https://emsejournal.github.io">here</a>. Welcome to submit!</li>
                     <li>[May, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Xin! <br/> 
                         <i>>>> We observe that the security patch information for disclosed OSS vulnerabilities in CVE/NVD is usually incomplete and incorrect. 
                             To ease the locating of security patches, we propose PatchScout which ranks the code commits 
