--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Feb, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity23">USENIX Security 2023</a>. Welcome to submit!</li>
+                    <li>[Feb, 2022] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2023/cfpapers.html">S&P 2023</a>. Welcome to submit!</li>
+                    <li>[Feb, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Lei & Zhibo! <br/>  
                     <li>[Jan, 2022] One paper accepted by <a href="https://www2022.thewebconf.org">WWW 2022</a>. Congrats Xin & Jiajun! <br/>  
                     <li>[Jan, 2022] One paper accepted by IEEE TDSC. Congrats Xiaohan! <br/>      
                     <li>[Jan, 2022] Join the TPC of <a href="https://esorics2022.compute.dtu.dk/cfp.html">ESORICS 2022</a>. We have two submission cycles this year (Jan 31 and May 22). Welcome to submit! </li>
@@ -384,6 +387,11 @@
                         <div class="venue">In Transactions on Dependable and Secure Computing (TDSC), 2022 (coming soon).
                         </div>
                     </li> 
+                    <li>
+                        <div class="title">Identity Confusion in WebView-based Mobile App-in-app Ecosystems.</div>
+                        <div class="author">Lei Zhang, Zhibo Zhang, Ancong Liu, Yinzhi Cao, Xiaohan Zhang, Yanjun Chen, Yuan Zhang, Guangliang Yang, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022 (coming soon).
+                    </li>
                     <li>
                         <div class="title">Backporting Security Patches of Web Applications: A Prototype Design and Implementation on Injection Vulnerability Patches.</div>
                         <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Xiangyu Mao, Yinzhi Cao, Ziwen Wang, Yudi Zhao, Zongan Huang, Min Yang.</div>
@@ -606,6 +614,8 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 44th IEEE Symposium on Security and Privacy (S&P 2023)</i>
+                    <li>the 32nd USENIX Security Symposium (USENIX Security 2023)</i>
                     <li>the 27th European Symposium on Research in Computer Security (ESORICS 2022)</i>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
                     <li>the 31st USENIX Security Symposium (USENIX Security 2022)</i>
