--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Jun, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/atc23">USENIX ATC 2023</a>. Welcome to submit!</li>
                     <li>[Feb, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity23">USENIX Security 2023</a>. Welcome to submit!</li>
                     <li>[Feb, 2022] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2023/cfpapers.html">S&P 2023</a>. Welcome to submit!</li>
                     <li>[Feb, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Lei & Zhibo! <br/>  
@@ -378,29 +379,36 @@
                     <li>
                         <div class="title">Understanding the Practice of Security Patch Management across Multiple Branches in OSS Projects.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Jiajun Cao, Kun Sun, Mi Zhang and Min Yang.</div>
-                        <div class="venue">In Proceedings of the 31st ACM Web Conference (WWW), Lyon, France, April 25–29, 2022 (coming soon).
+                        <div class="venue">In Proceedings of the 31st ACM Web Conference (WWW), Lyon, France, April 25–29, 2022.
+                            <a href="./paper/patchstudy-www22.pdf">[Paper]</a>
                         </div>
                     </li> 
                     <li>
                         <div class="title">Slowing Down the Aging of Learning-based Malware Detectors with API Knowledge.</div>
                         <div class="author">Xiaohan Zhang, Mi Zhang, Yuan Zhang, Ming Zhong, Xin Zhang, Yinzhi Cao, Min Yang.</div>
-                        <div class="venue">In Transactions on Dependable and Secure Computing (TDSC), 2022 (coming soon).
+                        <div class="venue">In Transactions on Dependable and Secure Computing (TDSC), 2022.
+                            <a href="https://ieeexplore.ieee.org/document/9693181">[Online]</a>
                         </div>
                     </li> 
                     <li>
                         <div class="title">Identity Confusion in WebView-based Mobile App-in-app Ecosystems.</div>
                         <div class="author">Lei Zhang, Zhibo Zhang, Ancong Liu, Yinzhi Cao, Xiaohan Zhang, Yanjun Chen, Yuan Zhang, Guangliang Yang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022 (coming soon).
+                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022.
+                            <a href="paper/miniapp-identity-security22.pdf">[Paper]</a>
+                        </div>
                     </li>
                     <li>
                         <div class="title">Backporting Security Patches of Web Applications: A Prototype Design and Implementation on Injection Vulnerability Patches.</div>
                         <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Xiangyu Mao, Yinzhi Cao, Ziwen Wang, Yudi Zhao, Zongan Huang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022 (coming soon).
+                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022.
+                            <a href="./paper/skyport-security22.pdf">[Paper]</a>
+                        </div>
                     </li>
                     <li>
                         <div class="title">Exploit The Last Straw that Breaks Android System.</div>
                         <div class="author">Lei Zhang, Keke Lian, Haoyu Xiao, Zhibo Zhang, Peng Liu, Yuan Zhang, Min Yang, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 43rd IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2022 (coming soon).
+                        <div class="venue">In Proceedings of the 43rd IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2022.
+                            <a href="./paper/strawfuzzer-oakland22.pdf">[Paper]</a>
                         </div>
                     </li>                      
                     <li>
@@ -568,7 +576,7 @@
                     <li>
                         <div class="title">Swift: A Register-based JIT Compiler for Embedded JVMs.</div>
                         <div class="author">Yuan Zhang, Min Yang, Bo Zhou, Zhemin Yang, Weihua Zhang, Binyu Zang.</div>
-                        <div class="venue">In Proceedings of the 8th international conference on Virtual execution environments (VEE), London, UK, March 3-4, 2012.
+                        <div class="venue">In Proceedings of the 8th International Conference on Virtual Execution Environments (VEE), London, UK, March 3-4, 2012.
                             <a href="./paper/swift-vee2012.pdf">[Paper]</a>
                         </div>
                     </li>
@@ -616,6 +624,7 @@
                 <ul>
                     <li>the 44th IEEE Symposium on Security and Privacy (S&P 2023)</i>
                     <li>the 32nd USENIX Security Symposium (USENIX Security 2023)</i>
+                    <li>the 2023 USENIX Annual Technical Conference (USENIX ATC 2023)</i>
                     <li>the 27th European Symposium on Research in Computer Security (ESORICS 2022)</i>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
                     <li>the 31st USENIX Security Symposium (USENIX Security 2022)</i>
@@ -638,10 +647,10 @@
                 </ul>
             <div>Journal Reviewer:<br>
                 <ul>
-                    <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019, 2021</li>
+                    <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019, 2021, 2022</li>
                     <li>IEEE Transactions on Computers (TC) 2021</li>
-                    <li>Computer & Security 2016, 2017, 2018, 2019, 2020, 2021</li>
-                    <li>Journal of Software 2016, 2017, 2018, 2019, 2020, 2021</li>
+                    <li>Computer & Security 2016, 2017, 2018, 2019, 2020, 2021, 2022</li>
+                    <li>Journal of Software 2016, 2017, 2018, 2019, 2020, 2021, 2022</li>
                     <li>IEEE Transactions on Network and Service Management 2020</li>
                     <li>Computer Communications 2020</li>
                     <li>IEEE Transactions on Mobile Computing (TMC) 2016</li>
@@ -668,8 +677,8 @@
                 </ul>
             </div-->
 
-            <br>
-            <center><small>Last Modified: May 14, 2021, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <!-- <br> -->
+            <!-- <center><small>Last Modified: May 14, 2021, Contact: yuanxzhang [AT] fudan.edu.cn</small></center> -->
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
