--- a/index.html
+++ b/index.html
@@ -309,9 +309,10 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Jun, 2022] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Zheyue, Xinqian, and Zhuang! <br/>  
                     <li>[Jun, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/atc23">USENIX ATC 2023</a>. Welcome to submit!</li>
                     <li>[Feb, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity23">USENIX Security 2023</a>. Welcome to submit!</li>
-                    <li>[Feb, 2022] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2023/cfpapers.html">S&P 2023</a>. Welcome to submit!</li>
+                    <li>[Feb, 2022] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2023/cfpapers.html">IEEE S&P 2023</a>. Welcome to submit!</li>
                     <li>[Feb, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Lei & Zhibo! <br/>  
                     <li>[Jan, 2022] One paper accepted by <a href="https://www2022.thewebconf.org">WWW 2022</a>. Congrats Xin & Jiajun! <br/>  
                     <li>[Jan, 2022] One paper accepted by IEEE TDSC. Congrats Xiaohan! <br/>      
@@ -328,7 +329,7 @@
                             in the OSS code repository based on their correlations to a given vulnerability.  </i>             
                     </li>
                     <li>[April, 2021] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity22/call-for-papers">USENIX Security 2022</a>. Welcome to submit!</li>
-                    <li>[March, 2021] I will join the TPC of <a href="https://www.icics.cn/Cfp.html">ICICS 2021</a>. Welcome to submit!</li>
+                    <!-- <li>[March, 2021] I will join the TPC of <a href="https://www.icics.cn/Cfp.html">ICICS 2021</a>. Welcome to submit!</li>
                     <li>[March, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Jiarun! <br/> 
                         <i>>>> When a vulnerability is discovered by fuzzers on one software version, it is important to assess whether there are other versions that are also affected by this vulneabilty.           
                             We introduce a new technique, named <b>PoC Migration</b>, to assess the vulnerable versions of a known vulnerability.
@@ -336,22 +337,21 @@
                             
                     </li>
                     <li>[March, 2021] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2022/cfpapers.html">S&P 2022</a>. Welcome to submit!</li>
-                    <!-- <li>[Dec, 2020] Join the TPC of <a href="https://esorics2021.athene-center.de/call-for-papers.php">ESORICS 2021</a>. Note that we have two submission cycles this year, welcome to submit! </li> -->
-                    <!-- <li>[Oct, 2020] Join the TPC of <a href="https://www.ieee-security.org/TC/EuroSP2021/cfp.html">EuroS&P 2021</a>. Welcome to submit!</li>
+                    <li>[Dec, 2020] Join the TPC of <a href="https://esorics2021.athene-center.de/call-for-papers.php">ESORICS 2021</a>. Note that we have two submission cycles this year, welcome to submit! </li>
+                    <li>[Oct, 2020] Join the TPC of <a href="https://www.ieee-security.org/TC/EuroSP2021/cfp.html">EuroS&P 2021</a>. Welcome to submit!</li>
                     <li>[Sep, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
                         <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to <u>the latest Linux kernel (5.6-rc2)</u>, we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
-                    </li> -->
-                    <!-- <li>[Aug, 2020] Moved to the beautiful Jiangwan campus, welcome to visit us!</li>
+                    </li> 
+                    <li>[Aug, 2020] Moved to the beautiful Jiangwan campus, welcome to visit us!</li>
                     <li>[Aug, 2020] Join the TPC of <a href="http://www.codaspy.org/2021/cfp.html">CODASPY 2021</a>. Welcome to submit!</li>
                     <li>[July, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Xiaohan! <br/> 
                         <i>>>> In this paper, we introduce a new concept, named <b>API semantics</b>, to tackle model aging (a long-standing problem) in malware detection, from the perspective of enhancing feature space abstractions. </i>                        
                     </li>
-                    <li>[July, 2020] Join the TPC of <a href="https://asiaccs2021.comp.polyu.edu.hk/datescalls/call-for-papers/">AsiaCCS 2021</a>. Welcome to submit!</li> -->
-                    <!-- <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> 
+                    <li>[July, 2020] Join the TPC of <a href="https://asiaccs2021.comp.polyu.edu.hk/datescalls/call-for-papers/">AsiaCCS 2021</a>. Welcome to submit!</li> 
+                    <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> 
                         <i>>>> This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 millions of transactions.</i></li>
                     <li>[March, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> 
-                        <i>>>> This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li> -->
-                    <!--
+                        <i>>>> This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li>
                     <li>[Feb, 2020] Join the TPC of <a href="http://securecomm.org/call-for-papers/">SecureComm 2020</a>. Welcome to submit!</li>
                     <li>[Dec, 2019] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2020/">Oakland 2020</a>. Congrats Yuyu & Lei!</li>
                     <li>[Dec, 2019] One paper accepted by <a href="https://2020.icse-conferences.org/">ICSE 2020</a>. See you in Seoul!</li>
@@ -376,6 +376,13 @@
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
                 <ol>
+                    <li>
+                        <div class="title">AEM: Facilitating Cross-Version Exploitability Assessment of Linux Kernel Vulnerabilities.</div>
+                        <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Xinqian Sun, Zhuang Liu and Min Yang.</div>
+                        <div class="venue">In Proceedings of the 44th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2023 (coming soon).
+                            
+                        </div>
+                    </li> 
                     <li>
                         <div class="title">Understanding the Practice of Security Patch Management across Multiple Branches in OSS Projects.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Jiajun Cao, Kun Sun, Mi Zhang and Min Yang.</div>
