--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[July, 2022] One paper accepted by <a href="https://conf.researchr.org/home/ase-2022">ASE 2022</a>. Congrats Youkun, Tianhan, and Xiangyu! <br/>  
                     <li>[Jun, 2022] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Zheyue, Xinqian, and Zhuang! <br/>  
                     <li>[Jun, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/atc23">USENIX ATC 2023</a>. Welcome to submit!</li>
                     <li>[Feb, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity23">USENIX Security 2023</a>. Welcome to submit!</li>
@@ -380,6 +381,13 @@
                         <div class="title">AEM: Facilitating Cross-Version Exploitability Assessment of Linux Kernel Vulnerabilities.</div>
                         <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Xinqian Sun, Zhuang Liu and Min Yang.</div>
                         <div class="venue">In Proceedings of the 44th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2023 (coming soon).
+                            
+                        </div>
+                    </li> 
+                    <li>
+                        <div class="title">Precise (Un)Affected Version Analysis for Web Vulnerabilities.</div>
+                        <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Xiangyu Mao, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 37th IEEE/ACM International Conference on Automated Software Engineering (ASE), Ann Arbor, Michigan, United States, October 10-14, 2022 (coming soon).
                             
                         </div>
                     </li> 
