--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Aug, 2022] Our mobile app-in-app paper received Distinguished Paper Award at <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>! <br/>  
                     <li>[July, 2022] One paper accepted by <a href="https://conf.researchr.org/home/ase-2022">ASE 2022</a>. Congrats Youkun, Tianhan, and Xiangyu! <br/>  
                     <li>[Jun, 2022] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Zheyue, Xinqian, and Zhuang! <br/>  
                     <li>[Jun, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/atc23">USENIX ATC 2023</a>. Welcome to submit!</li>
@@ -322,14 +323,14 @@
                     <li>[Sept, 2021] I will join the TPC of <a href="https://www2022.thewebconf.org/cfp/research/security/">WWW 2022</a> (Security, Privacy, and Trust Track). Welcome to submit!</li>
                     <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
                     </li>
-                    <li>[May, 2021] I will join the TPC of <a href="https://asiaccs2022.conferenceservice.jp/dateandcall/callforpapers/">AsiaCCS 2022</a>. Welcome to submit!</li>
+                    <!-- <li>[May, 2021] I will join the TPC of <a href="https://asiaccs2022.conferenceservice.jp/dateandcall/callforpapers/">AsiaCCS 2022</a>. Welcome to submit!</li>
                     <li>[May, 2021] I will join the Editorial Board of <a href="https://www.springer.com/journal/10664">Empirical Software Engineering</a>.  More information can be found <a href="https://emsejournal.github.io">here</a>. Welcome to submit!</li>
                     <li>[May, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Xin! <br/> 
                         <i>>>> We observe that the security patch information for disclosed OSS vulnerabilities in CVE/NVD is usually incomplete and incorrect. 
                             To ease the locating of security patches, we propose PatchScout which ranks the code commits 
                             in the OSS code repository based on their correlations to a given vulnerability.  </i>             
                     </li>
-                    <li>[April, 2021] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity22/call-for-papers">USENIX Security 2022</a>. Welcome to submit!</li>
+                    <li>[April, 2021] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity22/call-for-papers">USENIX Security 2022</a>. Welcome to submit!</li> -->
                     <!-- <li>[March, 2021] I will join the TPC of <a href="https://www.icics.cn/Cfp.html">ICICS 2021</a>. Welcome to submit!</li>
                     <li>[March, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Jiarun! <br/> 
                         <i>>>> When a vulnerability is discovered by fuzzers on one software version, it is important to assess whether there are other versions that are also affected by this vulneabilty.           
@@ -392,23 +393,9 @@
                         </div>
                     </li> 
                     <li>
-                        <div class="title">Understanding the Practice of Security Patch Management across Multiple Branches in OSS Projects.</div>
-                        <div class="author">Xin Tan, Yuan Zhang, Jiajun Cao, Kun Sun, Mi Zhang and Min Yang.</div>
-                        <div class="venue">In Proceedings of the 31st ACM Web Conference (WWW), Lyon, France, April 25–29, 2022.
-                            <a href="./paper/patchstudy-www22.pdf">[Paper]</a>
-                        </div>
-                    </li> 
-                    <li>
-                        <div class="title">Slowing Down the Aging of Learning-based Malware Detectors with API Knowledge.</div>
-                        <div class="author">Xiaohan Zhang, Mi Zhang, Yuan Zhang, Ming Zhong, Xin Zhang, Yinzhi Cao, Min Yang.</div>
-                        <div class="venue">In Transactions on Dependable and Secure Computing (TDSC), 2022.
-                            <a href="https://ieeexplore.ieee.org/document/9693181">[Online]</a>
-                        </div>
-                    </li> 
-                    <li>
                         <div class="title">Identity Confusion in WebView-based Mobile App-in-app Ecosystems.</div>
                         <div class="author">Lei Zhang, Zhibo Zhang, Ancong Liu, Yinzhi Cao, Xiaohan Zhang, Yanjun Chen, Yuan Zhang, Guangliang Yang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022.
+                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022. <b>[Distinguished Paper Award]</b>
                             <a href="paper/miniapp-identity-security22.pdf">[Paper]</a>
                         </div>
                     </li>
@@ -426,6 +413,20 @@
                             <a href="./paper/strawfuzzer-oakland22.pdf">[Paper]</a>
                         </div>
                     </li>                      
+                    <li>
+                        <div class="title">Understanding the Practice of Security Patch Management across Multiple Branches in OSS Projects.</div>
+                        <div class="author">Xin Tan, Yuan Zhang, Jiajun Cao, Kun Sun, Mi Zhang and Min Yang.</div>
+                        <div class="venue">In Proceedings of the 31st ACM Web Conference (WWW), Lyon, France, April 25–29, 2022.
+                            <a href="./paper/patchstudy-www22.pdf">[Paper]</a>
+                        </div>
+                    </li> 
+                    <li>
+                        <div class="title">Slowing Down the Aging of Learning-based Malware Detectors with API Knowledge.</div>
+                        <div class="author">Xiaohan Zhang, Mi Zhang, Yuan Zhang, Ming Zhong, Xin Zhang, Yinzhi Cao, Min Yang.</div>
+                        <div class="venue">In Transactions on Dependable and Secure Computing (TDSC), 2022.
+                            <a href="https://ieeexplore.ieee.org/document/9693181">[Online]</a>
+                        </div>
+                    </li> 
                     <li>
                         <div class="title">Locating the Security Patches for Disclosed OSS Vulnerabilities with Vulnerability-Commit Correlation Ranking.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Chenyuan Mi, Jiajun Cao, Kun Sun, Yifan Lin, Min Yang.</div>
@@ -450,7 +451,7 @@
                     <li>
                         <div class="title">Enhancing State-of-the-art Classifiers with API Semantics to Detect Evolved Android Malware.</div>
                         <div class="author">Xiaohan Zhang, Yuan Zhang, Ming Zhong, Daizong Ding, Yinzhi Cao, Yukun Zhang, Mi Zhang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security (CCS), Orlando, USA, November 9-13, 2020. <b>[Nominated for the Best Paper Award]</b>
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security (CCS), Orlando, USA, November 9-13, 2020. <b>[Distinguished Paper Award Nomination]</b>
                             <a href="./paper/apigraph-ccs20.pdf">[Paper]</a>
                         </div>
                     </li>               
@@ -663,9 +664,9 @@
             <div>Journal Reviewer:<br>
                 <ul>
                     <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019, 2021, 2022</li>
-                    <li>IEEE Transactions on Computers (TC) 2021</li>
                     <li>Computer & Security 2016, 2017, 2018, 2019, 2020, 2021, 2022</li>
                     <li>Journal of Software 2016, 2017, 2018, 2019, 2020, 2021, 2022</li>
+                    <li>IEEE Transactions on Computers (TC) 2021</li>
                     <li>IEEE Transactions on Network and Service Management 2020</li>
                     <li>Computer Communications 2020</li>
                     <li>IEEE Transactions on Mobile Computing (TMC) 2016</li>
