--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <p style="font-family: Courier New">
                 <b>Email:</b> yuanxzhang [AT] fudan.edu.cn <br>
                 <!-- <del><b>Office:</b> Room 313, Software Building, NO. 825 Zhangheng Road, Shanghai</del> <br> -->
-                <b>Office (Jiangwan Campus):</b> Room A6013, NO.2 Interdisciplinary Building, NO.2005 Songhu Road, Yangpu District, Shanghai
+                <b>Office (Jiangwan Campus):</b> Room D6011, NO.2 Interdisciplinary Building, NO.2005 Songhu Road, Yangpu District, Shanghai
             </p>
 
             <!-- 
@@ -389,14 +389,14 @@
                         <div class="title">Precise (Un)Affected Version Analysis for Web Vulnerabilities.</div>
                         <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Xiangyu Mao, Min Yang.</div>
                         <div class="venue">In Proceedings of the 37th IEEE/ACM International Conference on Automated Software Engineering (ASE), Ann Arbor, Michigan, United States, October 10-14, 2022 (coming soon).
-                            
+                            <a href="./paper/afv-ase22.pdf">[Paper]</a>
                         </div>
                     </li> 
                     <li>
                         <div class="title">Identity Confusion in WebView-based Mobile App-in-app Ecosystems.</div>
                         <div class="author">Lei Zhang, Zhibo Zhang, Ancong Liu, Yinzhi Cao, Xiaohan Zhang, Yanjun Chen, Yuan Zhang, Guangliang Yang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022. <b>[Distinguished Paper Award]</b>
-                            <a href="paper/miniapp-identity-security22.pdf">[Paper]</a>
+                            <a href="./paper/miniapp-identity-security22.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
