--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     <li>
                         <div class="title">Precise (Un)Affected Version Analysis for Web Vulnerabilities.</div>
                         <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Xiangyu Mao, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 37th IEEE/ACM International Conference on Automated Software Engineering (ASE), Ann Arbor, Michigan, United States, October 10-14, 2022 (coming soon).
+                        <div class="venue">In Proceedings of the 37th IEEE/ACM International Conference on Automated Software Engineering (ASE), Ann Arbor, Michigan, United States, October 10-14, 2022.
                             <a href="./paper/afv-ase22.pdf">[Paper]</a>
                         </div>
                     </li> 
