--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Dec, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity23/">USENIX Security 2023</a>. Congrats altman! <br/>  
+                    <li>[Oct, 2022] I will join the TPC of <a href="https://www.ieee-metacom.org/2023/cf-papers.php">IEEE MetaCom 2023</a>. Welcome to submit!</li>
                     <li>[Aug, 2022] Our mobile app-in-app paper received Distinguished Paper Award at <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>! <br/>  
                     <li>[July, 2022] One paper accepted by <a href="https://conf.researchr.org/home/ase-2022">ASE 2022</a>. Congrats Youkun, Tianhan, and Xiangyu! <br/>  
                     <li>[Jun, 2022] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Zheyue, Xinqian, and Zhuang! <br/>  
@@ -319,10 +321,10 @@
                     <li>[Jan, 2022] One paper accepted by <a href="https://www2022.thewebconf.org">WWW 2022</a>. Congrats Xin & Jiajun! <br/>  
                     <li>[Jan, 2022] One paper accepted by IEEE TDSC. Congrats Xiaohan! <br/>      
                     <li>[Jan, 2022] Join the TPC of <a href="https://esorics2022.compute.dtu.dk/cfp.html">ESORICS 2022</a>. We have two submission cycles this year (Jan 31 and May 22). Welcome to submit! </li>
-                    <li>[Dec, 2021] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Youkun! <br/>  
+                    <!-- <li>[Dec, 2021] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Youkun! <br/>  
                     <li>[Sept, 2021] I will join the TPC of <a href="https://www2022.thewebconf.org/cfp/research/security/">WWW 2022</a> (Security, Privacy, and Trust Track). Welcome to submit!</li>
                     <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
-                    </li>
+                    </li> -->
                     <!-- <li>[May, 2021] I will join the TPC of <a href="https://asiaccs2022.conferenceservice.jp/dateandcall/callforpapers/">AsiaCCS 2022</a>. Welcome to submit!</li>
                     <li>[May, 2021] I will join the Editorial Board of <a href="https://www.springer.com/journal/10664">Empirical Software Engineering</a>.  More information can be found <a href="https://emsejournal.github.io">here</a>. Welcome to submit!</li>
                     <li>[May, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Xin! <br/> 
@@ -379,6 +381,13 @@
             <div id="pub">
                 <ol>
                     <li>
+                        <div class="title">Remote Code Execution from SSTI in the Sandbox: Automatically Detecting and Exploiting Template Escape Bugs.</div>
+                        <div class="author">Yudi Zhao, Yuan Zhang and Min Yang.</div>
+                        <div class="venue">In Proceedings of the 32nd USENIX Security Symposium (USENIX Security), Anaheim, CA, USA, August 9-11, 2023 (coming soon).
+                            
+                        </div>
+                    </li> 
+                    <li>
                         <div class="title">AEM: Facilitating Cross-Version Exploitability Assessment of Linux Kernel Vulnerabilities.</div>
                         <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Xinqian Sun, Zhuang Liu and Min Yang.</div>
                         <div class="venue">In Proceedings of the 44th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2023 (coming soon).
@@ -425,6 +434,12 @@
                         <div class="author">Xiaohan Zhang, Mi Zhang, Yuan Zhang, Ming Zhong, Xin Zhang, Yinzhi Cao, Min Yang.</div>
                         <div class="venue">In Transactions on Dependable and Secure Computing (TDSC), 2022.
                             <a href="https://ieeexplore.ieee.org/document/9693181">[Online]</a>
+                        </div>
+                    </li> 
+                    <li>
+                        <div class="title">Refcount Field Identification for Linux Kernel Based on Deep Learning. </div>
+                        <div class="author">Xin Tan, Xiyu Yang, Jiajun Cao and Yuan Zhang.</div>
+                        <div class="venue">In the International Journal of Software & Informatics (IJSI). 2022, Vol. 12 Issue 3, p309-329.
                         </div>
                     </li> 
                     <li>
@@ -638,6 +653,7 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 2023 International Conference on Metaverse Computing, Networking and Applications (MetaCom 2023)</i>
                     <li>the 44th IEEE Symposium on Security and Privacy (S&P 2023)</i>
                     <li>the 32nd USENIX Security Symposium (USENIX Security 2023)</i>
                     <li>the 2023 USENIX Annual Technical Conference (USENIX ATC 2023)</i>
