--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Jan, 2023] I will join the TPC of <a href="https://icics23.nankai.edu.cn/call_for_papers.php">ICICS 2023</a>. Welcome to submit!</li>
                     <li>[Dec, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity23/">USENIX Security 2023</a>. Congrats altman! <br/>  
                     <li>[Oct, 2022] I will join the TPC of <a href="https://www.ieee-metacom.org/2023/cf-papers.php">IEEE MetaCom 2023</a>. Welcome to submit!</li>
                     <li>[Aug, 2022] Our mobile app-in-app paper received Distinguished Paper Award at <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>! <br/>  
@@ -390,8 +391,8 @@
                     <li>
                         <div class="title">AEM: Facilitating Cross-Version Exploitability Assessment of Linux Kernel Vulnerabilities.</div>
                         <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Xinqian Sun, Zhuang Liu and Min Yang.</div>
-                        <div class="venue">In Proceedings of the 44th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2023 (coming soon).
-                            
+                        <div class="venue">In Proceedings of the 44th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2023.
+                            <a href="./paper/aem-oakland23.pdf">[Paper]</a>
                         </div>
                     </li> 
                     <li>
@@ -619,10 +620,10 @@
             <div>Undergraduate level:<br>
                 <ul>
                     <li> Principles of Reverse Engineering <i>(in School of Computer Science)</i>
-                        <ul><li><i>Spring 2018, Spring 2019, Spring 2020, Spring 2021, Spring 2022</i></li></ul>
+                        <ul><li><i>Spring 2018, Spring 2019, Spring 2020, Spring 2021, Spring 2022, Spring 2023</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
-                        <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019, Fall 2020, Fall 2021</i></li></ul>
+                        <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019, Fall 2020, Fall 2021, Fall 2022</i></li></ul>
                     </li>
                     <li> Compiler Principles <i>(in School of Software)</i>
                         <ul><li><i>Fall 2017</i></li></ul>
@@ -633,7 +634,7 @@
             <div>Graduate level:<br>
                 <ul>
                     <li> Emerging Attack & Defense Techniques <i>(in School of Software)</i>
-                        <ul><li><i>Spring 2019, Spring 2020, Spring 2021, Spring 2022</i></li></ul>
+                        <ul><li><i>Spring 2019, Spring 2020, Spring 2021, Spring 2022, Spring 2023</i></li></ul>
                     </li>
                     <li> Computer Network Security <i>(in School of Software)</i>
                         <ul><li><i>Spring 2016, Spring 2017, Spring 2018</i></li></ul>
@@ -653,6 +654,7 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 25th International Conference on Information and Communications Security (ICICS 2023)</i>
                     <li>the 2023 International Conference on Metaverse Computing, Networking and Applications (MetaCom 2023)</i>
                     <li>the 44th IEEE Symposium on Security and Privacy (S&P 2023)</i>
                     <li>the 32nd USENIX Security Symposium (USENIX Security 2023)</i>
@@ -679,6 +681,7 @@
                 </ul>
             <div>Journal Reviewer:<br>
                 <ul>
+                    <li>IEEE Transactions on Software Engineering (TSE) 2023</li>
                     <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019, 2021, 2022</li>
                     <li>Computer & Security 2016, 2017, 2018, 2019, 2020, 2021, 2022</li>
                     <li>Journal of Software 2016, 2017, 2018, 2019, 2020, 2021, 2022</li>
