--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[March, 2023] I will join the TPC of <a href="https://www.ndss-symposium.org/ndss2024/submissions/call-for-papers/">NDSS 2024</a>. Welcome to submit!</li>
+                    <li>[March, 2023] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Xiaohan! <br/>  
                     <li>[Jan, 2023] I will join the TPC of <a href="https://icics23.nankai.edu.cn/call_for_papers.php">ICICS 2023</a>. Welcome to submit!</li>
                     <li>[Dec, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity23/">USENIX Security 2023</a>. Congrats altman! <br/>  
                     <li>[Oct, 2022] I will join the TPC of <a href="https://www.ieee-metacom.org/2023/cf-papers.php">IEEE MetaCom 2023</a>. Welcome to submit!</li>
@@ -318,10 +320,10 @@
                     <li>[Jun, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/atc23">USENIX ATC 2023</a>. Welcome to submit!</li>
                     <li>[Feb, 2022] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity23">USENIX Security 2023</a>. Welcome to submit!</li>
                     <li>[Feb, 2022] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2023/cfpapers.html">IEEE S&P 2023</a>. Welcome to submit!</li>
-                    <li>[Feb, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Lei & Zhibo! <br/>  
+                    <!-- <li>[Feb, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Lei & Zhibo! <br/>  
                     <li>[Jan, 2022] One paper accepted by <a href="https://www2022.thewebconf.org">WWW 2022</a>. Congrats Xin & Jiajun! <br/>  
                     <li>[Jan, 2022] One paper accepted by IEEE TDSC. Congrats Xiaohan! <br/>      
-                    <li>[Jan, 2022] Join the TPC of <a href="https://esorics2022.compute.dtu.dk/cfp.html">ESORICS 2022</a>. We have two submission cycles this year (Jan 31 and May 22). Welcome to submit! </li>
+                    <li>[Jan, 2022] Join the TPC of <a href="https://esorics2022.compute.dtu.dk/cfp.html">ESORICS 2022</a>. We have two submission cycles this year (Jan 31 and May 22). Welcome to submit! </li> -->
                     <!-- <li>[Dec, 2021] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity22/">USENIX Security 2022</a>. Congrats Youkun! <br/>  
                     <li>[Sept, 2021] I will join the TPC of <a href="https://www2022.thewebconf.org/cfp/research/security/">WWW 2022</a> (Security, Privacy, and Trust Track). Welcome to submit!</li>
                     <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
@@ -383,14 +385,22 @@
                 <ol>
                     <li>
                         <div class="title">Remote Code Execution from SSTI in the Sandbox: Automatically Detecting and Exploiting Template Escape Bugs.</div>
-                        <div class="author">Yudi Zhao, Yuan Zhang and Min Yang.</div>
+                        <div class="author">Yudi Zhao, Yuan Zhang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 32nd USENIX Security Symposium (USENIX Security), Anaheim, CA, USA, August 9-11, 2023 (coming soon).
-                            
+                            <a href="./paper/tefuzz-security23-TR.pdf">[Tech. Report]</a>
+                            <a href="./paper/tefuzz-security23.pdf">[Paper]</a>
                         </div>
                     </li> 
                     <li>
+                        <div class="title">Understanding the (In)Security of Cross-side Face Verification Systems in Mobile Apps: A System Perspective.</div>
+                        <div class="author">Xiaohan Zhang, Haoqi Ye, Ziqi Huang, Xiao Ye, Yinzhi Cao, Yuan Zhang, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 44th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2023.
+                            
+                        </div>
+                    </li>
+                    <li>
                         <div class="title">AEM: Facilitating Cross-Version Exploitability Assessment of Linux Kernel Vulnerabilities.</div>
-                        <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Xinqian Sun, Zhuang Liu and Min Yang.</div>
+                        <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Xinqian Sun, Zhuang Liu, Min Yang.</div>
                         <div class="venue">In Proceedings of the 44th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2023.
                             <a href="./paper/aem-oakland23.pdf">[Paper]</a>
                         </div>
@@ -425,7 +435,7 @@
                     </li>                      
                     <li>
                         <div class="title">Understanding the Practice of Security Patch Management across Multiple Branches in OSS Projects.</div>
-                        <div class="author">Xin Tan, Yuan Zhang, Jiajun Cao, Kun Sun, Mi Zhang and Min Yang.</div>
+                        <div class="author">Xin Tan, Yuan Zhang, Jiajun Cao, Kun Sun, Mi Zhang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 31st ACM Web Conference (WWW), Lyon, France, April 25–29, 2022.
                             <a href="./paper/patchstudy-www22.pdf">[Paper]</a>
                         </div>
@@ -439,7 +449,7 @@
                     </li> 
                     <li>
                         <div class="title">Refcount Field Identification for Linux Kernel Based on Deep Learning. </div>
-                        <div class="author">Xin Tan, Xiyu Yang, Jiajun Cao and Yuan Zhang.</div>
+                        <div class="author">Xin Tan, Xiyu Yang, Jiajun Cao, Yuan Zhang.</div>
                         <div class="venue">In the International Journal of Software & Informatics (IJSI). 2022, Vol. 12 Issue 3, p309-329.
                         </div>
                     </li> 
@@ -593,7 +603,7 @@
                     </li>
                     <li>
                         <div class="title">AppIntent: Analyzing Sensitive Data Transmission in Android for Privacy Leakage Detection.</div>
-                        <div class="author">Zhemin Yang, Min Yang, Yuan Zhang, Guofei Gu, Peng Ning and X. Sean Wang.</div>
+                        <div class="author">Zhemin Yang, Min Yang, Yuan Zhang, Guofei Gu, Peng Ning, X. Sean Wang.</div>
                         <div class="venue">In Proceedings of the 20th ACM Conference on Computer and Communications Security (CCS), Berlin, Germany, November 4-8, 2013.
                             <a href="./paper/appintent-ccs2013.pdf">[Paper]</a>
                         </div>
@@ -654,6 +664,7 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 2024 Network and Distributed System Security Symposium (NDSS 2024)</i>
                     <li>the 25th International Conference on Information and Communications Security (ICICS 2023)</i>
                     <li>the 2023 International Conference on Metaverse Computing, Networking and Applications (MetaCom 2023)</i>
                     <li>the 44th IEEE Symposium on Security and Privacy (S&P 2023)</i>
